--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_searching"
         android:orderInCategory="100"
+        android:icon="@drawable/ic_menu_search_v"
         android:title="@string/action_searching"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
