--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_icon_menu">38dp</dimen>
     <dimen name="app_icon_nav_header">48dp</dimen>
+    <dimen name="miniMargin">4dp</dimen>
+    <dimen name="standard_news_image_size">100dp</dimen>
+    <dimen name="half_standard_margin">8dp</dimen>
+    <dimen name="progressSize">30dp</dimen>
+    <dimen name="image_news_detail_full_size">220dp</dimen>
 </resources>
