--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -7,4 +7,6 @@
     <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_send</item>
     <item name="ic_menu_search_v" type="drawable">@drawable/ic_menu_search</item>
     <item name="ic_menu_bshair_v" type="drawable">@drawable/ic_menu_bshair</item>
+    <item name="ic_menu_share_v" type="drawable">@drawable/ic_menu_share</item>
+    <item name="ic_menu_add_comment_v" type="drawable">@drawable/ic_menu_add_comment</item>
 </resources>
