--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,10 @@
         android:layout_height="@dimen/nav_header_height"
         android:id="@+id/viewPager"/>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_news"
         android:layout_width="match_parent"
@@ -29,7 +33,9 @@
         android:layout_height="@dimen/progressSize"
         android:layout_marginBottom="@dimen/miniMargin"
         android:visibility="gone"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom|center"
  />
+
+    </FrameLayout>
 
 </LinearLayout>
