ui improvement in detail content

--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -9,4 +9,6 @@
     <item name="ic_menu_bshair_v" type="drawable">@drawable/ic_menu_bshair</item>
     <item name="ic_menu_share_v" type="drawable">@drawable/ic_menu_share</item>
     <item name="ic_menu_add_comment_v" type="drawable">@drawable/ic_menu_add_comment</item>
+    <item name="ic_menu_person_v" type="drawable">@drawable/ic_menu_person</item>
+    <item name="ic_menu_clock_v" type="drawable">@drawable/ic_menu_clock</item>
 </resources>
