--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -2,21 +2,21 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="@dimen/half_standard_margin"
+    android:layout_marginEnd="@dimen/half_standard_margin">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@color/white"
-            android:layout_marginStart="@dimen/half_standard_margin"
-            android:layout_marginEnd="@dimen/half_standard_margin"
             >
-
 
             <ImageView
                 android:layout_marginTop="@dimen/half_standard_margin"
@@ -25,6 +25,109 @@
                 android:layout_height="@dimen/image_news_detail_full_size"
                 android:background="@color/accent"
                 android:scaleType="centerCrop" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:layout_marginBottom="@dimen/half_standard_margin"
+                android:layout_height="wrap_content"
+                android:alpha="@dimen/high_alpha">
+
+                <TextView
+                    android:id="@+id/detail_cat_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@color/grey_200"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:orientation="horizontal"
+                    android:text="@string/test_small_title"
+                    android:textSize="@dimen/caption_text_size"
+                    />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_menu_person_v"
+                        android:layout_gravity="center"
+                        android:padding="@dimen/smal_padding"
+                        />
+
+                    <TextView
+                        android:id="@+id/detail_author_name"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="@string/test_small_title"
+                        android:layout_gravity="center"
+                        android:textSize="@dimen/caption_text_size"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent">
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_menu_clock_v"
+                        android:layout_gravity="center"
+                        android:padding="@dimen/smal_padding"
+                        />
+
+                    <TextView
+                        android:id="@+id/detail_time_posting"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textSize="@dimen/caption_text_size"
+                        android:text="@string/test_small_title"
+                        android:layout_gravity="center"
+                        />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:tint="?attr/colorAccent"
+                        android:src="@drawable/ic_menu_add_comment_v"
+                        android:layout_gravity="center"
+                        android:padding="@dimen/smal_padding"
+                        />
+
+                    <TextView
+                        android:id="@+id/detail_comment_number"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textSize="@dimen/caption_text_size"
+                        android:text="@string/test_number"
+                        android:textColor="?attr/colorAccent"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/des_news_detail"
@@ -36,6 +139,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
+
+
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
