--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,8 @@
     <dimen name="progressSize">30dp</dimen>
     <dimen name="image_news_detail_full_size">220dp</dimen>
     <dimen name="banner_title_height">36dp</dimen>
+    <dimen name="smal_padding">2dp</dimen>
+    <dimen name="caption_text_size">12sp</dimen>
+    <item name="half_alpha" type="dimen" format="float">0.5</item>
+    <item name="high_alpha" type="dimen" format="float">0.75</item>
 </resources>
