--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -33,7 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textSize="@dimen/appbar_text_size"
+                android:textAppearance="@style/TextAppearance.FontPath"/>
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
