--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -45,7 +45,7 @@
                     android:maxLines="1"
                     android:orientation="horizontal"
                     android:text="@string/test_small_title"
-                    android:textSize="@dimen/caption_text_size"
+                    android:textSize="@dimen/very_small_caption"
                     />
 
                 <LinearLayout
@@ -69,7 +69,8 @@
                         android:layout_width="wrap_content"
                         android:text="@string/test_small_title"
                         android:layout_gravity="center"
-                        android:textSize="@dimen/caption_text_size"
+                        android:textSize="@dimen/very_small_caption"
+
                         />
                 </LinearLayout>
 
@@ -93,7 +94,7 @@
                         android:id="@+id/detail_time_posting"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:textSize="@dimen/caption_text_size"
+                        android:textSize="@dimen/very_small_caption"
                         android:text="@string/test_small_title"
                         android:layout_gravity="center"
                         />
@@ -120,7 +121,7 @@
                         android:id="@+id/detail_comment_number"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:textSize="@dimen/caption_text_size"
+                        android:textSize="@dimen/very_small_caption"
                         android:text="@string/test_number"
                         android:textColor="?attr/colorAccent"
                         android:layout_gravity="center"
@@ -136,6 +137,7 @@
                 android:text="@string/test_title"
                 android:layout_marginTop="@dimen/miniMargin"
                 android:padding="@dimen/half_standard_margin"
+                android:textSize="@dimen/smal_caption_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
