--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -28,7 +28,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:padding="@dimen/half_standard_margin"
+                android:textSize="@dimen/caption_text_size"
                 android:text="@string/test_title"
-                android:textStyle="bold" />
+                 />
         </LinearLayout>
     </android.support.v7.widget.CardView>
