--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,5 +6,6 @@
         android:orderInCategory="100"
         android:icon="@drawable/ic_menu_search_v"
         android:title="@string/action_searching"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        app:actionViewClass="android.widget.SearchView" />
 </menu>
