--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="smal_caption_size">10sp</dimen>
     <dimen name="very_small_caption">8sp</dimen>
     <dimen name="line_space_detail_text">16dp</dimen>
+    <dimen name="des_dialog_send_comment">200dp</dimen>
     <item name="half_alpha" type="dimen" format="float">0.5</item>
     <item name="high_alpha" type="dimen" format="float">0.75</item>
 </resources>
