--- a/app/src/main/res/layout/content_main_search.xml
+++ b/app/src/main/res/layout/content_main_search.xml
@@ -6,8 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/app_bar_main_search"
     android:orientation="vertical"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin">
+>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -17,7 +16,8 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:id="@+id/recycler_news_search"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+/>
 
         <ProgressBar
             android:id="@+id/progressbar_search"
