--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -8,7 +8,11 @@
     android:layout_height="100dp"
     app:cardElevation="@dimen/cardview_default_radius"
     app:cardCornerRadius="@dimen/miniMargin"
-    android:layout_margin="@dimen/miniMargin"
+    android:layout_marginTop="@dimen/miniMargin"
+    android:layout_marginBottom="@dimen/miniMargin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+
     >
 
         <LinearLayout
