--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -67,5 +67,11 @@
 
     <include layout="@layout/content_main" />
 
+    <android.support.v4.view.ViewPager
+        android:background="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/banner_advertising_height"
+        android:layout_gravity="bottom"
+        android:id="@+id/viewPagerAdvertising"/>
 
 </android.support.design.widget.CoordinatorLayout>
