--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_news"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/banner_advertising_height"/>
 
 
     <ProgressBar
@@ -29,6 +30,9 @@
         android:visibility="gone"
         android:layout_gravity="center_horizontal|top"
  />
+
+
+
 
     </FrameLayout>
 
