--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="large_padding">44dp</dimen>
     <dimen name="banner_height">280dp</dimen>
     <dimen name="banner_height_land">380dp</dimen>
+    <dimen name="banner_advertising_height">96dp</dimen>
     <item name="half_alpha" type="dimen" format="float">0.5</item>
     <item name="high_alpha" type="dimen" format="float">0.75</item>
 </resources>
