--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainCardView"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="@dimen/standard_news_image_size"
     app:cardElevation="@dimen/cardview_default_radius"
     app:cardCornerRadius="@dimen/miniMargin"
     android:layout_marginTop="@dimen/miniMargin"
@@ -26,15 +26,37 @@
                 android:layout_height="match_parent"
                 android:background="?attr/colorPrimary" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical">
+
+
             <TextView
                 android:id="@+id/title_news"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:maxLines="2"
                 android:textAppearance="@style/TextAppearance.FontPath"
                 android:padding="@dimen/half_standard_margin"
                 android:textSize="@dimen/caption_text_size"
                 android:text="@string/test_title"
                  />
+
+            <TextView
+                android:id="@+id/cat_news"
+                android:maxLines="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.FontPath"
+                android:padding="@dimen/half_standard_margin"
+                android:textSize="@dimen/appbar_text_size"
+                android:alpha="0.7"
+                />
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
