--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -57,7 +57,7 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:orientation="horizontal"
-                    android:text="@string/test_small_title"
+                    android:text="@string/cat_name_title"
                     android:layout_marginRight="@dimen/miniMargin"
                     android:layout_marginLeft="@dimen/miniMargin"
                     android:textSize="@dimen/smal_caption_size"
@@ -82,7 +82,7 @@
                         android:id="@+id/detail_author_name"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:text="@string/test_small_title"
+                        android:text="@string/author_name_title"
                         android:layout_gravity="center"
                         android:textSize="@dimen/smal_caption_size"
                         android:textAppearance="@style/TextAppearance.FontPath_regular"/>
@@ -109,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:textSize="@dimen/smal_caption_size"
-                        android:text="@string/test_small_title"
+                        android:text="@string/time_title"
                         android:layout_gravity="center"
                         android:textAppearance="@style/TextAppearance.FontPath_regular"/>
 
